--- a/terraform-aws-ecs/package.json
+++ b/terraform-aws-ecs/package.json
@@ -1,7 +1,6 @@
 {
-  "name": "node-docker-ecs",
+  "name": "test-terraform-demo",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -11,5 +10,6 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.1"
-  }
+  },
+  "description": ""
 }
